--- a/ch_qt/beam_app/mainwindow.ui
+++ b/ch_qt/beam_app/mainwindow.ui
@@ -15,6 +15,21 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>8</number>
+    </property>
+    <property name="topMargin">
+     <number>2</number>
+    </property>
+    <property name="rightMargin">
+     <number>8</number>
+    </property>
+    <property name="bottomMargin">
+     <number>8</number>
+    </property>
     <item>
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
@@ -179,15 +194,17 @@
    </property>
    <property name="styleSheet">
     <string notr="true">QToolBar {
-    spacing: 3px; /* spacing between items in the tool bar */
-	border: 0px;
+    border-width: 1px;
+    border-bottom-style: solid;
+	border-top-style: solid;
+    /*border-color: rgb(226, 226, 226);*/
 }</string>
    </property>
    <property name="movable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="floatable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -195,10 +212,19 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
+   <addaction name="separator"/>
    <addaction name="addSectionAction"/>
    <addaction name="removeSectionAction"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="addSectionAction">
+   <property name="icon">
+    <iconset resource="beam_app_resource.qrc">
+     <normaloff>:/images/icons8-add-100.png</normaloff>:/images/icons8-add-100.png</iconset>
+   </property>
    <property name="text">
     <string>Add</string>
    </property>
@@ -207,6 +233,10 @@
    </property>
   </action>
   <action name="removeSectionAction">
+   <property name="icon">
+    <iconset resource="beam_app_resource.qrc">
+     <normaloff>:/images/icons8-minus-100.png</normaloff>:/images/icons8-minus-100.png</iconset>
+   </property>
    <property name="text">
     <string>Remove</string>
    </property>
@@ -215,21 +245,37 @@
    </property>
   </action>
   <action name="actionNew">
+   <property name="icon">
+    <iconset resource="beam_app_resource.qrc">
+     <normaloff>:/images/icons8-add-file-100.png</normaloff>:/images/icons8-add-file-100.png</iconset>
+   </property>
    <property name="text">
     <string>New</string>
    </property>
   </action>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="beam_app_resource.qrc">
+     <normaloff>:/images/icons8-opened-folder-100.png</normaloff>:/images/icons8-opened-folder-100.png</iconset>
+   </property>
    <property name="text">
     <string>Open...</string>
    </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset resource="beam_app_resource.qrc">
+     <normaloff>:/images/icons8-save-100.png</normaloff>:/images/icons8-save-100.png</iconset>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
   </action>
   <action name="actionSave_as">
+   <property name="icon">
+    <iconset resource="beam_app_resource.qrc">
+     <normaloff>:/images/icons8-save-as-100.png</normaloff>:/images/icons8-save-as-100.png</iconset>
+   </property>
    <property name="text">
     <string>Save as...</string>
    </property>
@@ -249,6 +295,8 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="beam_app_resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
