--- a/ch_qt/beam_app/mainwindow.ui
+++ b/ch_qt/beam_app/mainwindow.ui
@@ -276,6 +276,9 @@
    <property name="movable">
     <bool>false</bool>
    </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonIconOnly</enum>
+   </property>
    <property name="floatable">
     <bool>false</bool>
    </property>
@@ -293,6 +296,31 @@
    <addaction name="removeSectionAction"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QToolBar" name="toolBar_2">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QToolBar {
+    border-width: 1px;
+    border-bottom-style: solid;
+	border-top-style: solid;
+    border-color: rgb(226, 226, 226);
+}</string>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonTextBesideIcon</enum>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionShowMoments"/>
+   <addaction name="actionShowShear"/>
+   <addaction name="actionShowDeflections"/>
+  </widget>
   <action name="addSectionAction">
    <property name="icon">
     <iconset resource="beam_app_resource.qrc">
@@ -356,6 +384,30 @@
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionShowMoments">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Moment</string>
+   </property>
+  </action>
+  <action name="actionShowShear">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Shear</string>
+   </property>
+  </action>
+  <action name="actionShowDeflections">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Deflections</string>
    </property>
   </action>
  </widget>
